src/styles/article-detail.css
/* ... */
.toc li a:hover {
color: var(--text-link);
    text-decoration: underline;
}

/*左容器*/
.article-container {
width: 830px;
    margin: 20px 10px;
    padding: 20px;
    background-color: var(--bg-primary);
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    box-sizing: border-box;
    overflow: hidden;
    transition: all 0.3s;
}

.article-container:hover {
box-shadow: 0 0 10px var(--text-muted);
    -moz-box-shadow: 0 0 10px var(--text-muted);
}

.sort-box {
height: 40px;
    width: 100%;
    border-bottom: #eaeaea solid 1px;
    line-height: 40px;
}

.at-sort-s {
height: 40px;
    width: 60%;
    font-size: 18px;
    /*border-bottom: #eaeaea solid 1px;*/
}

.at-sort-a {
height: 40px;
    padding: 0 2px;
    display: inline-block;
    text-align: left;
    /*border-bottom: var(--text-link-hover) solid 2px;*/
    font-weight: bold;
}

.at-sort-comment-a {
height: 40px;
    padding: 0 2px;
    display: inline-block;
    text-align: left;
    border-bottom: var(--text-link) solid 2px;
    font-weight: bold;
}

.location {
line-height: 40px;
    width: 100%;
    /*border-bottom: #eaeaea solid 1px;*/
}

.at-sort-detail {
line-height: 40px;
    padding: 0 2px;
    display: inline-block;
    text-align: center;
    float: left;
    font-size: 16px;
}

.at-sort-detail a {
color: #2f332a;
    transition: all 0.3s ease-in-out;
    font-size: 16px;
}

.at-sort-detail a:hover {
color: var(--text-link-hover);
}

.article-content {
margin-top: 15px;
    width: 100%;
    font-size: 15px;
    line-height: 32px;
    border-bottom: #eaeaea solid 1px;
}

.article-content .infomation-list {
width: auto;
    height: auto;
    border-radius: 10px;
    background-color: rgb(255, 252, 235);
    color: var(--text-primary);
    padding: 2px 2px 2px 2px;
}

/*.article-content img {
display: block;
    max-width: 680px;
    max-height: 380px;
    margin: 10px auto;
}

*/

/*.article-content > p {
width: 100%;
    text-indent: 2em;
}

*/

/*.article-content p {
font-size: 15px;
    width: 100%;
    !*text-indent: 2em;*!
}

*/

/*右容器*/
.column-holder {
width: 300px;
    margin: 15px 10px 10px 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.08);
    transition: ease-in-out background-color 0.3s;
}

.column-holder:hover {
box-shadow: 0 0 10px #7e8795;
    -moz-box-shadow: 0 0 10px #7e8795;
}

.column-holder ul,
li {
margin: 0;
    padding: 0;
    list-style: none;
    box-sizing: content-box;
}

.column_box {
width: 100%;
    background-color: white;
    border-radius: 10px;
    overflow: hidden;
}

.column_box .column-title {
width: 91%;
    height: 60px;
    padding-left: 9%;
    line-height: 60px;
    font-size: 16px;
    font-weight: 600;
    background-color: var(--border-light);
}

.column_box .column-category {
height: 50px;
    line-height: 50px;
    /*单行文本溢出显示省略号*/
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.column_box .column-category a {
width: 82%;
    margin: 0 9%;
    color: var(--text-muted);
    -webkit-transition: -webkit-transform 1s linear;
    -moz-transition: -moz-transform 1s linear;
    -o-transition: -o-transform 1s linear;
    -ms-transition: -ms-transform 1s linear;
}

.column_box .column-category a:hover {
color: var(--text-link);
}

.writer-info {
width: 100%;
    font-size: 16px;
    text-align: left;
    /*color: #98A6AD;*/
    /*margin: 0;*/
    color: #a6a6a6;
    /*border-bottom: #eaeaea solid 1px;*/
}

.writer-info #writer {
margin-left: 2px;
}

.writer-info>span {
height: 30px;
        margin: 5px 2px;
        display: inline-block;
        line-height: 30px;
}

.prev-next {
width: 100%;
    height: auto;
    margin-top: 10px;
}

.prev-next a {
max-width: 70%;
        float: left;
}

.prev-next div {
width: 100%;
    height: 50px;
    float: left;
}

.p-div {
text-align: left;
}

.n-div {
text-align: right;
}

.prev-next span {
float: left;
}

.prev-next a:hover {
color: var(--text-link);
    text-decoration: underline var(--text-link);
}

.prev-next #prev-a {
/*float: left;*/
}

.prev-next #next-a {
/*float: right;*/
}

.comment-container {
width: 100%;
        margin: 0;
        padding: 5px;
}

.comment-container:hover {
box-shadow: 0 0 10px var(--text-muted);
    -moz-box-shadow: 0 0 10px var(--text-muted);
}

.text-area-holder {
width: 100%;
    /*height: 130px;*/
    margin-top: 20px;
}

#text-area {
width: 96%;
        margin: 0 2%;
        padding: 0;
}

.button-line {
width: 100%;
    height: 60px;
}

.button-line #error-info {
height: 40px;
    line-height: 40px;
    margin: 5px;
    float: left;
    color: red;
    font-weight: bold;
    font-size: 16px;
}

.button-line #publish-btn {
float: right;
    width: 100px;
    height: 40px;
    margin-top: 10px;
    background-color: var(--text-link);
    color: var(--bg-primary);
    border-radius: 10px;
    cursor: pointer;
}

.total-count {
width: 100%;
}

#comment-count {
color: var(--text-link);
}

.comment-item {
width: 100%;
    /*min-height: 100px;*/
    margin-top: 15px;
    /*padding-bottom: 20px;*/
    border-bottom: #eaeaea 1px solid;
    overflow: hidden;
}

.comment-item .user-img-box {
width: 15%;
        /*弹性布局*/
        display: flex;
        /*水平居中*/
        justify-content: center;
        /*垂直居中*/
        /*align-items: center;*/
}

.comment-item .user-img-box #user-img {
width: 50px;
    height: 50px;
    border-radius: 50%;
    overflow: hidden;
    margin: 5px auto;
}

.comment-item .comment-box {
width: 85%;
        float: right;
}

.comment-box .user-info {
width: 100%;
}

.comment-box p {
padding: 0;
}

.comment-box img {
max-width: 35%;
    vertical-align: middle;
    border: 0;
    height: auto;
    -ms-interpolation-mode: bicubic;
    overflow: hidden;
    font-size: 12px;
    padding-bottom: 5px;
}

.user-info span {
height: 25px;
    float: left;
}

.user-info .user-name {
font-weight: bold;
    margin-left: 10px;
}
/* ... */

